<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WakeMeApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="atras">Atrás</string>
	<string name="agregar">Agregar</string>
	<!--  <string name="acerca">WakeMeApp ha sido desarrollada por Luis, Manuel y Víctor y forma parte de un proyecto desarrollado en la asignatura &apos;Informática Móvil&apos;</string>-->
	<string name="acerca">WakeMeApp ha sido desarrollada por Luis, Manuel, Mariano y Víctor y forma parte de un proyecto desarrollado para la asignatura Informática Móvil en la Universidad de La Rioja.</string>
	<string name="desc">WakeMeApp Team</string>
	<string name="crear">Crear</string>
	<string name="ubicacion">Ubicación</string>
	<string name="distancia">Distancia</string>
	<string name="destino">Destino</string>
	
    <string name="tituloRepetirAlarma">Repetir Alarma</string>
    <string-array name="repetirCada">
        <item>Cada Minuto</item>
        <item>Cada 3 Minutos</item>
        <item>Cada 5 Minutos</item>
        <item>Cada 10 Minutos</item>
        <item>Cada 15 Minutos</item>
    </string-array>
    <string name="nombreAlarma">Nombre</string>
    <string name="nombreCancion">Canción</string>
    <string name="acercaDe">Acerca De</string>
    <string name="favoritos">Favoritos</string>
    <string name="crearAlarma">Crear Alarma</string>
    <string name="verActivas">Alarmas Activas</string>
    <string name="settings">Ajustes</string>
    <string name="mapa">Seleccion de destino</string>
	
</resources>
